--- a/philia/philia/Base.lproj/Main.storyboard
+++ b/philia/philia/Base.lproj/Main.storyboard
@@ -424,6 +424,7 @@ what are ya waiting for?</string>
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="kVF-KP-YLT" sceneMemberID="viewController">
                     <toolbarItems/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="QbE-8v-RMg">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -435,7 +436,7 @@ what are ya waiting for?</string>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aPa-ye-1AA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="439" y="371"/>
+            <point key="canvasLocation" x="837.5" y="371.5"/>
         </scene>
     </scenes>
 </document>
